--- a/guessNumber/style.css
+++ b/guessNumber/style.css
@@ -117,3 +117,11 @@ h1 {
 .label-score {
   margin-bottom: 2rem;
 }
+
+.body-win {
+  background-color: rgb(9, 250, 21);
+}
+
+.question-win {
+  width: 50rem;
+}
