--- a/pigGame/style.css
+++ b/pigGame/style.css
@@ -166,3 +166,77 @@ main {
 .hidden {
   display: none;
 }
+
+/** rules **/
+
+h1 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  line-height: 20px;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+li {
+  font-size: 1.5rem;
+}
+
+.show-modal-window {
+  transform: translate(-200%, -800%);
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 400;
+  transition: all 0.2s;
+  font-weight: 600;
+  padding: 1.5rem 3.2rem;
+  margin: 5rem 2rem;
+  border: none;
+  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(10px);
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
+}
+
+.close-modal-window {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #444;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.modal-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 25%;
+  background-color: rgba(255, 255, 255, 0.35);
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
