--- a/react-sneakers/src/index.scss
+++ b/react-sneakers/src/index.scss
@@ -35,16 +35,6 @@ header {
   }
 }
 
-.button {
-  background: #ffffff;
-  border: 1px solid #f2f2f2;
-  box-sizing: border-box;
-  border-radius: 8px;
-  height: 32px;
-  width: 32px;
-  cursor: pointer;
-}
-
 .search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
@@ -59,9 +49,9 @@ header {
 }
 
 .overlay {
-  position: absolute;
-  left: 0;
+  position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
